[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'caenhv-devman-client'
version = '0.1.0'
description = 'Generated devman package: caenhv_devman_client'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ['src']
